# europeana-qlever

./: .gitignore  .gitmodules  CLAUDE.md  README.md  dataset_card.md  pyproject.toml  setup-spark.md
docs/europeana/: EDM.md  confluence-lock.json
docs/europeana/Europeana Knowledge Base/: Article 14 National Implementations Overview.md  Copyright management guidelines for cultural heritage institutions.md  EDM - Mapping guidelines.md  Europeana APIs Documentation.md  Europeana Data Model.md  Europeana Knowledge Base.md  Europeana and IIIF.md  Media policy.md  Persistent identifiers.md  (+9 more)
grasp/: benchmark-config.json  benchmark.py  benchmark.yml  entities-info.sparql  europeana-benchmark.jsonl  europeana-entity.sparql  europeana-grasp.yaml  europeana-notes.json  europeana-notes.md  europeana-property.sparql  generate-notes.py  prefixes.json  setup.sh
queries/: places.sparql  rights_and_providers.sparql  web_resources.sparql
scripts/: generate-edm-schema.py  update-all.py  update-edm-schema.py  update-europeana-docs.py  update-metis-vocabularies.py  update-qlever-docs.py
src/: cli.py  constants.py  export.py  init.py
src/europeana_qlever/: analysis.py  ask.py  cli.py  compose.py  constants.py  croissant.py  dashboard.py  display.py  edm_schema.py  export.py  merge.py  metrics.py  monitor.py  query.py  report.py  report_sparql.py  resources.py  rights.py  schema_loader.py  state.py  telemetry.py  throttle.py  validate.py
tests/: test_analysis.py  test_compose.py  test_export.py  test_query.py  test_rights.py  test_state.py  test_throttle.py  test_validate.py
(+271 files in other folders)
