[project]
name = "europeana-qlever"
version = "0.1.0"
description = "CLI for ingesting Europeana EDM TTL into QLever and exporting to Parquet"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "rdflib>=7.0",
    "httpx>=0.27",
    "duckdb>=1.5",
    "pyarrow>=17.0",
]

[project.scripts]
europeana-qlever = "europeana_qlever.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/europeana_qlever"]